fix(api): remove device_id property from user model
