# apps/api/validators/user.go
@@ -7,9 +7,8 @@ import (
 var validate = validator.New()
 
 type CreateUserRequest struct {
-	DeviceId string `json:"device_id" validate:"required,uuid4"`
-	Name     string `json:"name" validate:"required,min=1"`
-	Email    string `json:"email" validate:"omitempty,email"`
+	Name  string `json:"name" validate:"required,min=1"`
+	Email string `json:"email" validate:"omitempty,email"`
 }
 
 type GetUserRequest struct {
